--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <meta http-equiv="Refresh" content="0; url=https://docs.google.com/spreadsheets/d/e/2PACX-1vTr9hk9F_7YDqmfr-9TVh7sX5MmKGQbD6VkN7qi8VFNcP0R5G7lMtWn3dn6_syzkqzoN-Bf7IQ8pdEI/pubhtml" />
+    <meta http-equiv="Refresh" content="0; url=https://ukraine-berlin.notion.site/ukraine-berlin/Berlin-UA-Arrival-Help-64f6983bce33433e80d8b153e1411817" />
   </head>
 </html>
 
